@@ -21,6 +21,7 @@ Added refresh to bootstrap.sh to build seed from cc_x86.s
 Added missing license headers
 Added support for ~expressions
 Added prototype for Slow_Lisp build test
+Added Custom type for mes.h
 
 ** Changed
 Converted M2-Planet to use GNU style error message
